--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!doctype html>
-<html lang="en">
+<html lang="ca">
 
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="./src/assets/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <title>UE Sant Andreu | Club de futbol històric de Barcelona</title>
+
+  <meta
+    name="description"
+    content="Web oficial de la Unió Esportiva Sant Andreu. Notícies, informació del club, plantilla i contacte."
+  />
+
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
-  <title>UE Sant Andreu</title>
 </head>
 
 <body>
